--- a/css/general.css
+++ b/css/general.css
@@ -75,6 +75,10 @@ body {
   overflow-x: hidden;
   background: var(--color-white-base);
   position: relative;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* **************************************** */
@@ -122,9 +126,11 @@ body {
 .sticky {
   position: fixed;
   top: 0;
-  left: 0;
+  bottom: 0;
+
   width: 100%;
   height: 8rem;
+  padding-block: 0;
   background-color: rgba(234, 236, 240, 0.9);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
