--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 /* HEADER NAVIGATION  */
 /* **************************************** */
 .header {
+  width: 100%;
   border-bottom: 1px solid var(--color-grey-100);
 }
 
@@ -843,6 +844,9 @@ input:focus {
 /* *********************************** */
 /* FOOTER */
 /* *********************************** */
+footer {
+  width: 100%;
+}
 .footer-section {
   background-color: var(--color-purple-800);
 }
